tests/parse_print/random_perturb/set01/change-10/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-10/change-10.essence line 1, column 10:
language name has to be Essence, but given: E
    line 1, column 10
    language E@sence 1.3
          ^^^^^^^